# bmst

./: .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  README  README.rst  azure-pipelines.yml  bmst.ini  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonapp.yml
bmst/: __init__.py  backup_app.py  main.py  managed.py  metastore.py  store.py  utils.py  wsgi.py
docs/: Makefile  api.rst  cli.rst  conf.py  design.rst  index.rst  make.bat
example/: store.args
testing/: test_backup_app.py  test_blobstore.py  test_manager.py  test_metastore.py
unprotocols/: 01_Govenance.md  02_ContentStorage.md  02_Layering.md
