[metadata]
name = bmst
description = simple backup store
long_description = file:README
license_file = LICENSE.md
license = AGPL-3+

[options]
packages = find:
install_requires =
  httplib2
  werkzeug
  attr
  wsgi_intercept
  click
  click_log
  orjson

[options.entry_points]
console_scripts =
  bmst = bmst.main:main
