[metadata]
name = bmst
description = simple backup store
long_description = file:README
license_file = LICENSE.md
license = AGPL-3+

[options]
packages = find:
install_requires =
  httpx
  werkzeug
  attr
  click
  click_log
  orjson

[options.entry_points]
console_scripts =
  bmst = bmst.main:main

[options.extras_require]
test = pytest
